2010-01-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12924: Bugfix: t3lib_tcemain checkFullLanguageAccess is too restrictive (Thanks to Tolleiv Nietsch)
	* Fixed bug #13211: Change focus to login field when OpenId is selected at login (Thanks to Steffen Gebert)
	* Follow-up to #12781: Bug: tceforms type do not work if the type field has l10n_mode == exclude (thanks to Fabrizio Branca)

2010-01-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13092: Massuploader button is too small (Thanks to Steffen Gebert)

2010-01-10  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12977: treeLevel in TSconfig conditions should consider the creation of new pages

2010-01-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13191: Scheduler fails with fatal error if using intervals in cron command
	* Fixed bug #12631: Flash Message to the history / changelog (Thanks to Georg Ringer)
	* Fixed bug #12928: SQL error in translationCount() if table does not provide deleted field (Thanks to Georg Ringer)
	* Fixed bug #12507: (Un)Install icon points to wrong extension in Opera (Thanks to Steffen Gebert)

2010-01-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13098: DB list: layout looks weird with thumbnails (Thanks to Steffen Gebert)
	* Fixed bug #13097: File list: Alternating row colors are weird with thumbnails (Thanks to Steffen Gebert)

2010-01-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12779: Previously selected type of backend login is now stored in a cookie (Thanks to Sebastian Gebhard)

2010-01-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.9.0

2010-01-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13134: Support of SQL LOCATE function

2010-01-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12341: Image generation broken with PHPs safe_mode activated and GraphicsMagick (Thanks to Marcus Krause, Helmut Hummel and Bernhard Kraft)

2010-01-04  Steffen Kamper  <info@sk-typo3.de>
